Typos and links 0.4

--- a/fest/templates/index.html
+++ b/fest/templates/index.html
@@ -196,14 +196,14 @@
                                             in the Winter Acro Fest 2019 for the Second time teaching
                                             Acrobatics Icarians and more">
                                     </span>
-                                    With these two beauties we go way back to the beggings of our acro carriers. Amazing
+                                    We go way back with this to beauties, almost to the beggings of our acro carriers. Amazing
                                     friends and teachers!! We're very happy to have them back.<br>
-                                    Alfonso has so much encouraging energy. You cannot stop him doing acro!<br>
+                                    Alfonso has such a encouraging energy. You cannot stop him doing acro!<br>
                                     Celine, well... if her smilie doesn't captivate you, just wait to see her fly icarians and whips.
                                     Jaw dropping.<br>
-                                    The'll be sharing their whips, pops and icarians moves in this Winter Festival 2019.
+                                    The'll be sharing their whips and icarians moves in this Winter Festival 2019.
                                     </p>
-                                    <p><h2>Trudi & Wybrem</h2></p>
+                                    <p><h2>Trudi & Wybren</h2></p>
                                     <p>
                                     <span class="image right">
                                             <img src="{% static "fest/images/teachers2019/wybremandtrudi.jpg"%}" alt="Wybrem and Trudi
@@ -212,7 +212,7 @@
                                     I'll be honest, first encounter was a bit intimidating. But then you go full FKK at
                                     some random acro conventions and you realise we're all in the same rail here (sort of).<br>
                                     It's endless what you could learn from this couple of amazing acrobats!<br>
-                                    Wybrem is teacher at the Codarts Circus School in Rotterdam and with Trudi they have
+                                    Wybren is teacher at the Codarts Circus School in Rotterdam and with Trudi they have
                                     given many of our favorite technical Workshops. Very happy to have them on board!
                                     </p>
                                     <p><h2>Peter</h2></p>
@@ -222,10 +222,10 @@
                                             in the Winter Acro Fest 2019 for the Second time teaching
                                             Acrobatics Icarians and more">
                                     </span>
-                                    We where on our way to give a workshop in Copenhagen and while stalking the local
-                                    teachers we came across some pretty nice flows. Later that that day we finaly met
+                                    We where on our way to give a workshop in Copenhagen and while researching the local
+                                    teachers we came across some pretty nice flows. Later that day we finaly met
                                     the authors: Peter and Julie. So lovely and beautiful people!! and what a multi poli
-                                    hiper mover Peter is. Very happy to have him for the Winter Acro 2019!
+                                    hiper mover Peter is. Very happy he accepted our invitation!
                                     </p>
                                     <p><h2>Fer & Fifi</h2></p>
                                     <p>
@@ -234,10 +234,10 @@
                                             in the Winter Acro Fest 2019 for the Second time teaching
                                             Acrobatics Icarians and more">
                                     </span>
-                                    We met this couple just recently at the 7th Barcelona Mano a Mano Convention and liked
-                                    they'r way of teaching so much that we had to invite them.<br>
-                                    Experts in flying and Circus art are going to share a peace of their knowleadge with us!
-                                    Thanks for accepting our invitation and happy to see you soon !
+                                    We met this duo just recently at the 7th Barcelona Mano a Mano Convention and liked
+                                    their way of teaching so much that we had to invite them.<br>
+                                    Experts in acrobatics and many other circus arts, they are going to share a peace
+                                    of their knowleadge with us! Thanks for accepting our invitation and happy to see you soon !
                                     </p>
                                     <p><h2>Paul</h2></p>
                                     <p>
@@ -258,9 +258,9 @@
                                             in the Winter Acro Fest 2019 for the Second time teaching
                                             Acrobatics Icarians and more">
                                     </span>
-                                    For been "just his hobby" Daniel has investes A LOT of time in his practice, and
-                                    another bunch in developing the basel and swiss acro community. Mostly traveling
-                                    arround from one big acro event to another, he hardly misses the local events. Very
+                                    For being "just his hobby" Daniel has investes A LOT of time in acro, and
+                                    another bunch in developing the Basel and Swiss acro community. Mostly traveling
+                                    arround from one big event to another, he hardly misses the local events. Very
                                     happy to have him sharing all that collected knowleadge at the Winter Acro Festival
                                     this 2019!
                                     </p>
@@ -271,9 +271,9 @@
                                             in the Winter Acro Fest 2019 for the Second time teaching
                                             Acrobatics Icarians and more">
                                     </span>
-                                    We met Ben at the post Dutch acro convention and after he noticed all or
+                                    We met Ben at the post Dutch acro convention. After he noticed all or
                                     technicals mistakes we developed a bit of a training plan with him. What a difference
-                                    when you talk with profesionals. Ben and Elli are circus school graduates with many
+                                    when you talk with profesionals. Ben and Elli are Circus school graduates with many
                                     more talents than just acrobatics. I hope you can see one of their shows too, highly
                                     recommended. Very happy to see them again this Winter!
                                     </p>
@@ -286,8 +286,8 @@
                                     </span>
                                     I had to laugh only from remembering Bruno at the French acro convention, what a
                                     blast you'll have with this guy! Improvisation and staging are he's strengths and
-                                    passion. But there are no words, you just have to meet him. Happy to have you with
-                                    us!!
+                                    passion. But it's hard to find the words to describe such a clown, you just have
+                                    to meet him. Happy to have you with us my friend!
                                     </p>
 
                             </div>
