Order of sections

--- a/fest/templates/index.html
+++ b/fest/templates/index.html
@@ -117,6 +117,115 @@
                     </ul>
                 </footer>
             </section>
+            <section id="teachers" class="main">
+                    <header class="major">
+                                    <h2>Teachers 2019</h2>
+                                    </header>
+                    <div class="box alt">
+                            <div class="row gtr-uniform">
+                                    <p><h2>Celine & Alfonso - AcroWings</h2></p>
+                                    <p>
+                                    <span class="image left">
+                                            <img src="{% static "fest/images/teachers2019/acrowings.jpg"%}" alt="Acrowings
+                                            in the Winter Acro Fest 2019 for the Second time teaching
+                                            Acrobatics Icarians and more">
+                                    </span>
+                                    With these two beauties we go way back to the begginings of our carriers. Amazing
+                                    friends and teachers!! We're very happy to have them back.<br>
+                                    Alfonso has such a encouraging energy. You cannot stop him doing acro!<br>
+                                    Celine, well... if her smilie doesn't captivate you, just wait to see her fly Icarians 
+                                    and whips. Jaw dropping.<br>
+                                    They will be sharing their whips and Icarian moves in this Winter Festival 2019.
+                                    </p>
+                                    <p><h2>Trudi & Wybren</h2></p>
+                                    <p>
+                                    <span class="image right">
+                                            <img src="{% static "fest/images/teachers2019/wybremandtrudi.jpg"%}" alt="Wybrem and Trudi
+                                            in the Winter Acro Fest 2019 - Skining Codarts and more">
+                                    </span>
+                                    I'll be honest, first encounter was a bit intimidating. But then you go full FKK at
+                                    some random acro conventions and you realise we're all in the same rail here (sort of).<br>
+                                    It's endless what you could learn from this couple of amazing acrobats!<br>
+                                    Wybren is teacher at the Codarts Circus School in Rotterdam and with Trudi they have
+                                    given many of our favourite technical workshops. Very happy to have them on board!
+                                    </p>
+                                    <p><h2>Peter</h2></p>
+                                    <p>
+                                    <span class="image left">
+                                            <img src="{% static "fest/images/teachers2019/peter.jpg"%}" alt="Acrowings
+                                            in the Winter Acro Fest 2019 for the Second time teaching
+                                            Acrobatics Icarians and more">
+                                    </span>
+                                    We where on our way to give a workshop in Copenhagen and while stalking the local
+                                    teachers we came across some pretty nice flows. Later that day we finally met
+                                    the authors: Peter and Julie. So lovely and beautiful people!! and what a multi poli
+                                    hiper mover Peter is. Very happy he accepted our invitation!
+                                    </p>
+                                    <p><h2>Fer & Fifi</h2></p>
+                                    <p>
+                                    <span class="image right">
+                                            <img src="{% static "fest/images/teachers2019/feryfifi.jpg"%}" alt="Acrowings
+                                            in the Winter Acro Fest 2019 for the Second time teaching
+                                            Acrobatics Icarians and more">
+                                    </span>
+                                    We met this duo just recently at the 7th Barcelona Mano a Mano Convention and liked
+                                    their way of teaching so much that we had to invite them.<br>
+                                    Experts in acrobatics and many other circus arts, they are going to share a peace
+                                    of their knowleadge with us! Thanks for accepting our invitation and happy to see you soon !
+                                    </p>
+                                    <p><h2>Paul</h2></p>
+                                    <p>
+                                    <span class="image left">
+                                            <img src="{% static "fest/images/teachers2019/paul.jpg"%}" alt="Acrowings
+                                            in the Winter Acro Fest 2019 for the Second time teaching
+                                            Acrobatics Icarians and more">
+                                    </span>
+                                    First time I read about Paul they discribed him as the swiss knife of acrobatics.
+                                    Soon enought we learned to know why: basing, flying and basicly a encyclopedia of
+                                    creative tricks. He's comming to share hes many curious tricks and humor for the
+                                    first time in the Swiss alps.
+                                    </p>
+                                    <p><h2>Daniel Marty</h2></p>
+                                    <p>
+                                    <span class="image right">
+                                            <img src="{% static "fest/images/teachers2019/daniel.jpg"%}" alt="Acrowings
+                                            in the Winter Acro Fest 2019 for the Second time teaching
+                                            Acrobatics Icarians and more">
+                                    </span>
+                                    For being "just his hobby" Daniel has investes A LOT of time in acro, and
+                                    another bunch in developing the Basel and Swiss acro community. Mostly traveling
+                                    arround from one big event to another, he hardly misses the local events. Very
+                                    happy to have him sharing all that collected knowleadge at the Winter Acro Festival
+                                    this 2019!
+                                    </p>
+                                    <p><h2>Ben and Elli - Analogue Acrobatics</h2></p>
+                                    <p>
+                                    <span class="image left">
+                                            <img src="{% static "fest/images/teachers2019/benandelli.jpg"%}" alt="Acrowings
+                                            in the Winter Acro Fest 2019 for the Second time teaching
+                                            Acrobatics Icarians and more">
+                                    </span>
+                                    We met Ben at the post Dutch acro convention. After he noticed all or
+                                    technicals mistakes we developed a bit of a training plan with him. What a difference
+                                    when you talk with profesionals. Ben and Elli are Circus school graduates with many
+                                    more talents than just acrobatics. I hope you can see one of their shows too, highly
+                                    recommended. Very happy to see them again this Winter!
+                                    </p>
+                                    <p><h2>Bruno</h2></p>
+                                    <p>
+                                    <span class="image right">
+                                            <img src="{% static "fest/images/teachers2019/bruno.jpg"%}" alt="Acrowings
+                                            in the Winter Acro Fest 2019 for the Second time teaching
+                                            Acrobatics Icarians and more">
+                                    </span>
+                                    I had to laugh only from remembering Bruno at the French acro convention, what a
+                                    blast you'll have with this guy! Improvisation and staging are he's strengths and
+                                    passion. But it's hard to find the words to describe such a clown, you just have
+                                    to meet him. Happy to have you with us my friend!
+                                    </p>
+                            </div>
+                    </div>
+            </section>
             <section id="schedule" class="main special">
                 <header class="major">
                     <h2>Schedule</h2>
@@ -183,116 +292,7 @@
                     </ul>
                 </footer>-->
             </section>
-            <section id="teachers" class="main">
-                    <header class="major">
-                                    <h2>Teachers 2019</h2>
-                                    </header>
-                    <div class="box alt">
-                            <div class="row gtr-uniform">
-                                    <p><h2>Celine & Alfonso - AcroWings</h2></p>
-                                    <p>
-                                    <span class="image left">
-                                            <img src="{% static "fest/images/teachers2019/acrowings.jpg"%}" alt="Acrowings
-                                            in the Winter Acro Fest 2019 for the Second time teaching
-                                            Acrobatics Icarians and more">
-                                    </span>
-                                    We go way back with this to beauties, almost to the beggings of our acro carriers. Amazing
-                                    friends and teachers!! We're very happy to have them back.<br>
-                                    Alfonso has such a encouraging energy. You cannot stop him doing acro!<br>
-                                    Celine, well... if her smilie doesn't captivate you, just wait to see her fly icarians and whips.
-                                    Jaw dropping.<br>
-                                    The'll be sharing their whips and icarians moves in this Winter Festival 2019.
-                                    </p>
-                                    <p><h2>Trudi & Wybren</h2></p>
-                                    <p>
-                                    <span class="image right">
-                                            <img src="{% static "fest/images/teachers2019/wybremandtrudi.jpg"%}" alt="Wybrem and Trudi
-                                            in the Winter Acro Fest 2019 - Skining Codarts and more">
-                                    </span>
-                                    I'll be honest, first encounter was a bit intimidating. But then you go full FKK at
-                                    some random acro conventions and you realise we're all in the same rail here (sort of).<br>
-                                    It's endless what you could learn from this couple of amazing acrobats!<br>
-                                    Wybren is teacher at the Codarts Circus School in Rotterdam and with Trudi they have
-                                    given many of our favorite technical Workshops. Very happy to have them on board!
-                                    </p>
-                                    <p><h2>Peter</h2></p>
-                                    <p>
-                                    <span class="image left">
-                                            <img src="{% static "fest/images/teachers2019/peter.jpg"%}" alt="Acrowings
-                                            in the Winter Acro Fest 2019 for the Second time teaching
-                                            Acrobatics Icarians and more">
-                                    </span>
-                                    We where on our way to give a workshop in Copenhagen and while researching the local
-                                    teachers we came across some pretty nice flows. Later that day we finaly met
-                                    the authors: Peter and Julie. So lovely and beautiful people!! and what a multi poli
-                                    hiper mover Peter is. Very happy he accepted our invitation!
-                                    </p>
-                                    <p><h2>Fer & Fifi</h2></p>
-                                    <p>
-                                    <span class="image right">
-                                            <img src="{% static "fest/images/teachers2019/feryfifi.jpg"%}" alt="Acrowings
-                                            in the Winter Acro Fest 2019 for the Second time teaching
-                                            Acrobatics Icarians and more">
-                                    </span>
-                                    We met this duo just recently at the 7th Barcelona Mano a Mano Convention and liked
-                                    their way of teaching so much that we had to invite them.<br>
-                                    Experts in acrobatics and many other circus arts, they are going to share a peace
-                                    of their knowleadge with us! Thanks for accepting our invitation and happy to see you soon !
-                                    </p>
-                                    <p><h2>Paul</h2></p>
-                                    <p>
-                                    <span class="image left">
-                                            <img src="{% static "fest/images/teachers2019/paul.jpg"%}" alt="Acrowings
-                                            in the Winter Acro Fest 2019 for the Second time teaching
-                                            Acrobatics Icarians and more">
-                                    </span>
-                                    First time I read about Paul they discribed him as the swiss knife of acrobatics.
-                                    Soon enought we learned to know why: basing, flying and basicly a encyclopedia of
-                                    creative tricks. He's comming to share hes many curious tricks and humor for the
-                                    first time in the Swiss alps.
-                                    </p>
-                                    <p><h2>Daniel Marty</h2></p>
-                                    <p>
-                                    <span class="image right">
-                                            <img src="{% static "fest/images/teachers2019/daniel.jpg"%}" alt="Acrowings
-                                            in the Winter Acro Fest 2019 for the Second time teaching
-                                            Acrobatics Icarians and more">
-                                    </span>
-                                    For being "just his hobby" Daniel has investes A LOT of time in acro, and
-                                    another bunch in developing the Basel and Swiss acro community. Mostly traveling
-                                    arround from one big event to another, he hardly misses the local events. Very
-                                    happy to have him sharing all that collected knowleadge at the Winter Acro Festival
-                                    this 2019!
-                                    </p>
-                                    <p><h2>Ben and Elli - Analogue Acrobatics</h2></p>
-                                    <p>
-                                    <span class="image left">
-                                            <img src="{% static "fest/images/teachers2019/benandelli.jpg"%}" alt="Acrowings
-                                            in the Winter Acro Fest 2019 for the Second time teaching
-                                            Acrobatics Icarians and more">
-                                    </span>
-                                    We met Ben at the post Dutch acro convention. After he noticed all or
-                                    technicals mistakes we developed a bit of a training plan with him. What a difference
-                                    when you talk with profesionals. Ben and Elli are Circus school graduates with many
-                                    more talents than just acrobatics. I hope you can see one of their shows too, highly
-                                    recommended. Very happy to see them again this Winter!
-                                    </p>
-                                    <p><h2>Bruno</h2></p>
-                                    <p>
-                                    <span class="image right">
-                                            <img src="{% static "fest/images/teachers2019/bruno.jpg"%}" alt="Acrowings
-                                            in the Winter Acro Fest 2019 for the Second time teaching
-                                            Acrobatics Icarians and more">
-                                    </span>
-                                    I had to laugh only from remembering Bruno at the French acro convention, what a
-                                    blast you'll have with this guy! Improvisation and staging are he's strengths and
-                                    passion. But it's hard to find the words to describe such a clown, you just have
-                                    to meet him. Happy to have you with us my friend!
-                                    </p>
 
-                            </div>
-                    </div>
-            </section>
             <section id="media" class="main">
                     <header class="major">
                     <h2>Photos 2018</h2>
