Typos and links 0.5

--- a/fest/templates/index.html
+++ b/fest/templates/index.html
@@ -170,8 +170,8 @@
                                     </span>
                                     We met this duo just recently at the 7th Barcelona Mano a Mano Convention and liked
                                     their way of teaching so much that we had to invite them.<br>
-                                    Experts in acrobatics and many other circus arts, they are going to share a peace
-                                    of their knowleadge with us! Thanks for accepting our invitation and happy to see you soon !
+                                    Experts in acrobatics and many other Circus arts, they are going to share a piece
+                                    of their knowledge with us! Thanks for accepting our invitation and happy to see you soon !
                                     </p>
                                     <p><h2>Paul</h2></p>
                                     <p>
@@ -180,9 +180,9 @@
                                             in the Winter Acro Fest 2019 for the Second time teaching
                                             Acrobatics Icarians and more">
                                     </span>
-                                    First time I read about Paul they discribed him as the swiss knife of acrobatics.
-                                    Soon enought we learned to know why: basing, flying and basicly a encyclopedia of
-                                    creative tricks. He's comming to share hes many curious tricks and humor for the
+                                    First time I read about Paul, they discribed him as the swiss knife of acrobatics.
+                                    Soon enough we learned to know why: basing, flying and is basiclly a encyclopedia of
+                                    creative tricks. He's coming to share hes many curious tricks and humor for the
                                     first time in the Swiss alps.
                                     </p>
                                     <p><h2>Daniel Marty</h2></p>
