--- a/fest/templates/basefest.html
+++ b/fest/templates/basefest.html
@@ -1,7 +1,7 @@
-<!DOCTYPE html>
+<!DOCTYPE html>{% load static %}{% load analytical %}
 <html lang="en">
     <head>
-        {% load static %}
+        {% analytical_head_top %}
         <title>Winter Acro Festival - Acrobatic festival in the swiss alps.</title>
         <meta name="Description" content="The Winter Acro Festival based in Lenk Switzerland includes many acrobatic, acroyoga, Thai massage, yoga and movement workshops. With teachers form all around the world, a special attention to quality and different snow events its a event you should not miss!">
         <meta name="Keywords" content="acrobatic, acroyoga, swiss acro, acroyoga switzerland, suisse acrobatics, akrobatik schweizx">
@@ -11,19 +11,12 @@
         <meta property="og:title" content="Winter Acro Festival" />
         <meta property="og:image" content="{% static 'fest/images/banner.jpg' %}"/>
 		    {% include 'snippets/cssfest.html' %}
+            {% analytical_head_bottom %}
 	</head>
     <body>
+            {% analytical_body_top %}
             {% block content %}{% endblock content %}
             {% include 'snippets/jsfest.html' %}
-            <!-- Global site tag (gtag.js) - Google Analytics -->
-            <script async src="https://www.googletagmanager.com/gtag/js?id=UA-118797477-2"></script>
-            <script>
-                window.dataLayer = window.dataLayer || [];
-                function gtag(){dataLayer.push(arguments);}
-                gtag('js', new Date());
-
-                gtag('config', 'UA-118797477-2');
-            </script>
-
+            {% analytical_body_bottom %}
     </body>
 </html>
