--- a/fest/templates/index.html
+++ b/fest/templates/index.html
@@ -62,10 +62,9 @@
                         <span class="icon major style3 fas fa-utensils"></span>
                         <h3>Food</h3>
                         <p>
-                        Food plays an important roll in this festival. Main dishes, healthy snacks and fruits are all
-                        bio, mostly local, vegan and cooked with love.</br>* <u>Please note that there will be some help
+                        Food plays an important role in this festival. Main dishes, healthy snacks and fruits are all
+                        organic, mostly local, vegan and cooked with love.</br>* <u>Please note that there will be some help
                         asked from everyone arround small kitchen tasks.</u></br></br>
-                        <a class="button" href="">COOKING TEAM</a>
                         </p>
                         </li>
                     <li>
@@ -81,9 +80,9 @@
                         <span class="icon major style3 fas fa-snowflake"></span>
                         <h3>Special events</h3>
                         <p>
-                        On monday noon we organized a <u>snow event up on the mountain</u> at the ski resort
+                        Monday morning we will organized a <u>snow event up on the mountain</u> at the ski resort
                         (If the weather is good <i class="fa fa-hand-o-left" aria-hidden="true"></i>). Bring warm
-                        clothes for out-door acro. Free afternoon for ski, snowboard or free floor at the hall.</br>
+                        clothes for Outdoor acro. Free afternoon for ski, snowboard or free floor at the hall.</br>
                         There's <u>sauna to relax and an open stage</u> to share your talents.</br>*As an <u>EXTRA</u>,
                         we could organise a day ski ticket for you.
                         </p>
