--- a/acrofestival/templates/base.html
+++ b/acrofestival/templates/base.html
@@ -79,11 +79,10 @@
         <script type="text/javascript" src="{% static 'js/jquery.countTo.js'%}"></script>
         <script type="text/javascript" src="{% static 'js/masonry.pkgd.min.js'%}"></script>
         <script type="text/javascript" src="{% static 'js/modal-box.js'%}"></script>
-
       <!-- place project specific Javascript in this file -->
         <script type="text/javascript" src="{% static 'js/ventcamp.js'%}"></script>
-    
+
     {% endblock javascript %}
-i   {% analytical_body_bottom %}
+   {% analytical_body_bottom %}
   </body>
 </html>
