Ben and Elli swtich with with Uwe and Kerstin

--- a/fest/templates/index.html
+++ b/fest/templates/index.html
@@ -151,7 +151,7 @@
                                     <p><h2>Peter</h2></p>
                                     <p>
                                     <span class="image left">
-                                            <img src="{% static "fest/images/teachers2019/peter.jpg"%}" alt="Acrowings
+                                            <img src="{% static "fest/images/teachers2019/peter.jpg"%}" alt="Peter and Julie
                                             in the Winter Acro Fest 2019 for the Second time teaching
                                             Acrobatics Icarians and more">
                                     </span>
@@ -163,7 +163,7 @@
                                     <p><h2>Fer & Fifi</h2></p>
                                     <p>
                                     <span class="image right">
-                                            <img src="{% static "fest/images/teachers2019/feryfifi.jpg"%}" alt="Acrowings
+                                            <img src="{% static "fest/images/teachers2019/feryfifi.jpg"%}" alt="Fer and Fifi
                                             in the Winter Acro Fest 2019 for the Second time teaching
                                             Acrobatics Icarians and more">
                                     </span>
@@ -175,7 +175,7 @@
                                     <p><h2>Paul</h2></p>
                                     <p>
                                     <span class="image left">
-                                            <img src="{% static "fest/images/teachers2019/paul.jpg"%}" alt="Acrowings
+                                            <img src="{% static "fest/images/teachers2019/paul.jpg"%}" alt="Paul
                                             in the Winter Acro Fest 2019 for the Second time teaching
                                             Acrobatics Icarians and more">
                                     </span>
@@ -187,7 +187,7 @@
                                     <p><h2>Daniel Marty</h2></p>
                                     <p>
                                     <span class="image right">
-                                            <img src="{% static "fest/images/teachers2019/daniel.jpg"%}" alt="Acrowings
+                                            <img src="{% static "fest/images/teachers2019/daniel.jpg"%}" alt="Daniel Marty
                                             in the Winter Acro Fest 2019 for the Second time teaching
                                             Acrobatics Icarians and more">
                                     </span>
@@ -197,19 +197,17 @@
                                     happy to have him sharing all that collected knowleadge at the Winter Acro Festival
                                     this 2019!
                                     </p>
-                                    <p><h2>Ben and Elli - Analogue Acrobatics</h2></p>
+                                    <p><h2>Kerstin and Uwe - Cameo Acrobatix</h2></p>
                                     <p>
                                     <span class="image left">
-                                            <img src="{% static "fest/images/teachers2019/benandelli.jpg"%}" alt="Acrowings
+                                            <img src="{% static "fest/images/teachers2019/cameoacrobatix.jpg"%}" alt="Cameo Acrobatix
                                             in the Winter Acro Fest 2019 for the Second time teaching
                                             Acrobatics Icarians and more">
                                     </span>
-                                    We met Ben at the post Dutch acro convention. After he noticed all or
-                                    technicals mistakes we developed a bit of a training plan with him. What a difference
-                                    when you talk with profesionals. Ben and Elli are Circus school graduates with many
-                                    more talents than just acrobatics. I hope you can see one of their shows too, highly
-                                    recommended. Very happy to see them again this Winter!
-                                    </p>
+                                    It's been very nice to see how this friends have grown so fast and good in their Acro paths. Touring 
+                                    with their acro company all arround europe, giving very nice workshops. Very happy to have them on Board!
+                                    We picked them up in Berlin and Graz to bring them direct to Lenk yuhuiii! 
+                                    </p>-->
                                     <p><h2>Bruno</h2></p>
                                     <p>
                                     <span class="image right">
